<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/text_view1"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view2"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:background="@color/textBlue"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view3"
        android:textColor="@color/textBlue"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/textBlue"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/selectedDatePlaceholder"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvSelectedDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/selectedDate"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvAgeInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/textBlue"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/minsTillDatePlaceholder"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvAgeInMinutesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/minsTillDate"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvAgeInHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/textBlue"
        android:textStyle="bold"
        android:textSize="30sp"
        android:text="@string/hoursTillDatePlaceholder"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvAgeInHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/hoursTillDate"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/bgHighlight"
        android:text="@string/btnText"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>